--- a/nometa-ui/package.json
+++ b/nometa-ui/package.json
@@ -12,6 +12,8 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
+    "bootstrap": "^5.3.7",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
