--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ target/
 *.pdb
 
 .cargo/
+.vscode/
+.idea/
+
+.env
 
 # RustRover
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
