--- a/nometa-server/Cargo.toml
+++ b/nometa-server/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2024"
 [dependencies]
 actix-cors = "0.7.1"
 actix-web = "4.11.0"
+argon2 = "0.5.3"
+dotenvy = "0.15.7"
+rand = "0.9.2"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
-tokio = "1.45.0"
+sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio-native-tls", "time"] }
+time = { version = "0.3.41", features = ["serde"] }
+tokio = "1.47.1"
