--- a/nometa-server/Cargo.toml
+++ b/nometa-server/Cargo.toml
@@ -8,6 +8,7 @@ actix-cors = "0.7.1"
 actix-web = "4.11.0"
 argon2 = "0.5.3"
 dotenvy = "0.15.7"
+envy = "0.4.2"
 rand = "0.9.2"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
