--- a/nometa-server/docker-compose.yml
+++ b/nometa-server/docker-compose.yml
@@ -4,15 +4,19 @@ services:
     container_name: nometa-db
     restart: unless-stopped
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_ADMIN_USER}
       POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_PASSWORD: ${POSTGRES_ADMIN_PASSWORD}
+      POSTGRES_APP_USER: ${POSTGRES_APP_USER}
+      POSTGRES_APP_PASSWORD: ${POSTGRES_APP_PASSWORD}
     networks:
       - nometa-network
     volumes:
       - nometa_db-data:/var/lib/postgresql/data
+      - ./db/scripts:/scripts:ro
+      - ./db/run_migrations.sh:/docker-entrypoint-initdb.d/run_migrations.sh:ro
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_ADMIN_USER} -d ${POSTGRES_DB}" ]
       interval: 10s
       timeout: 5s
       retries: 5
