--- a/nometa-server/Cargo.toml
+++ b/nometa-server/Cargo.toml
@@ -9,9 +9,12 @@ actix-web = "4.11.0"
 argon2 = "0.5.3"
 dotenvy = "0.15.7"
 envy = "0.4.2"
+flexi_logger = "0.31.2"
 rand = "0.9.2"
+redis = { version = "0.32.5", features = ["tokio-comp"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio-native-tls", "time"] }
 time = { version = "0.3.41", features = ["serde"] }
 tokio = "1.47.1"
+uuid = { version = "1.18.0", features = ["v4"] }
