--- a/nometa-server/docker-compose.yml
+++ b/nometa-server/docker-compose.yml
@@ -21,13 +21,20 @@ services:
       timeout: 5s
       retries: 5
 
-  #
-  # memcached:
-  #   image: memcached:latest
-  #   container_name: nometa-memcached
-  #   restart: unless-stopped
-  #   networks:
-  #     - nometa-network
+  redis:
+    image: redis:7
+    container_name: nometa-redis
+    restart: unless-stopped
+    command: ["redis-server", "--save", "900", "1", "--loglevel", "warning"]
+    networks:
+      - nometa-network
+    volumes:
+      - nometa_redis-data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   # backend:
   #   build:
@@ -59,4 +66,6 @@ networks:
 
 volumes:
   nometa_db-data:
+    driver: local
+  nometa_redis-data:
     driver: local
